# myDotfiles

./: ..zshrc.un~  .Xresources  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .ideavimrc  .markdown-preview.html  .readme.md.~undo-tree~  .stow-local-ignore  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  Emacs.org  RectangleConfig.json  Session.vim  clangd_build_with_ninja.bat  dotReadMe.md  pyrightconfig.json  readme.md
.claude/: CLAUDE.md  settings.json
.config/: install.ps1  install.sh  install_ub.sh  keybindling.txt  readme.md  starship.copy.toml  starship.toml  vscode.txt  whkdrc
.config/aerospace/: aerospace.toml
.config/alacritty/: alacritty.toml
.config/biome/: biome.json
.config/eslint/: .eslintrc.json  package.json
.config/fvim/: config.json
.config/gcloud/: .last_survey_prompt.yaml  .last_update_check.json  access_tokens.db  credentials.db  default_configs.db
.config/gh/: hosts.yml
.config/ghostty/: config
.config/goneovim/: settings.toml
.config/gopass/: config
.config/i3/: config  config.bk
.config/jgit/: config
.config/komorebi/: komorebi.bar.json  komorebi.json
.config/lazygit/: config.yml
.config/neovide/: config.toml
.config/nvim/: .clang-format  .luacheckrc  .luarc.json  .markdownlint.json  .stylua.toml  init.lua  (+9 more)
.config/nvim.bak/: .luarc.json  .stylua.toml  filetype.lua  init.lua  lazy-lock.json  readme.md
.doom.d/: config.el  init.el
.emacs.d/: .cmd-system.el.~undo-tree~  .core.el.~undo-tree~  .early-init.el.~undo-tree~  .file-system.el.~undo-tree~  .init.el.~undo-tree~  .lsp.el.~undo-tree~  .opts.el.~undo-tree~  .reamdme.md.~undo-tree~  .ui.el.~undo-tree~  Emacs.org  cmd-system.el  config.el  core.el  custom-vars.el  early-init.el  file-system.el  init.el  lsp.el  option.el  opts.el  read.md  readme.md  reamdme.md  terminals.el  ui.el
.emacs.d.back/: early-init.el  init.el
.emacs.d.bak/: core.el  lsp.el  option.el
.github/: copilot-instructions.md
.hammerspoon/: init.lua
.pj_config/ruff/: pyproject.toml
.vim/: .netrwhist  .vimrc
.vscode.bak/: settings.json
.warp/: keybindings.yaml
.zed/: tasks.json
script/: nvim-remote.sh  run-nvim-remote.sh
wezterm_win/: wezterm.lua
windows/: .vsvimrc  Profile.copy.ps1  Profile.ps1  README.md  helpers.ps1  install-dev-tools.ps1  install.ps1  keybindings.json  optional-install.ps1  run-as-admin.ps1  setup-powershell.ps1  ssh_github.ps1  term_settings.json  test.ps1  windos_11_hotkeys.ahk
(+1108 files in other folders)
